Fix maxpermsize.